--- a/manifest.json
+++ b/manifest.json
@@ -22,7 +22,7 @@
 
   "browser_specific_settings":{
 	  "gecko":{
-		  "id":"ddgcsbr@example.com"
+		  "id":"clientsidebangs@dagans.dev"
 	  }
   },
 
