Revert "Change ID"
This reverts commit 56d7f0b90aafec448245fe2609ecd628718efed0.

--- a/manifest.json
+++ b/manifest.json
@@ -22,7 +22,7 @@
 
   "browser_specific_settings":{
 	  "gecko":{
-		  "id":"clientsidebangs@dagans.dev"
+		  "id":"ddgcsbr@example.com"
 	  }
   },
 
